--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
+            <h1>bonitão</h1>
             <h1>Oi, eu sou <span>Luiz</span></h1>
             <h3 class="texto-escrito">eu sou-<span></span></h3>
             <p>Olá, meu nome é Luiz, e sou um desenvolvedor de software com uma paixão por criar soluções tecnológicas inovadoras. Minha jornada na tecnologia começou há alguns anos, quando percebi que podia transformar ideias em realidade por meio da programação.</p>
