--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <a href="#">Habilidades</a>
             <a href="#">Experiência</a>
             <a href="#">Contato</a>
+            <a href="#">Contato</a>
+            <a href="#">Contato</a>
         </nav>
     </header>
     <section class="home">
